# TemporalGraphRagh

./: .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
confluence_graphrag/: pipeline.py  vertex_auth.py
confluence_graphrag/api/: app.py  deps.py  schemas.py
confluence_graphrag/api/routes/: ingestion.py  retrieval.py
confluence_graphrag/attachment_processor/: __init__.py  chunking.py  config.py  models.py  processor.py
confluence_graphrag/attachment_processor/extractors/: __init__.py  base.py  docx.py  excel.py  image.py  pdf.py  pptx.py
confluence_graphrag/entity_extraction/: __init__.py  config.py  extractor.py  llm_extractor.py  models.py  prompts.py  regex_scanner.py  validation_gateway.py
confluence_graphrag/graph/: __init__.py  adapter.py  embedder.py  factory.py  models.py  mongodb_adapter.py  neo4j_adapter.py  retriever.py  scoring.py  temporal_builder.py
confluence_graphrag/ingestion/: batch_ingestor.py  config.py  confluence_client.py  incremental_watcher.py  ingestion_log.py  models.py  upsert_handler.py
confluence_graphrag/parser/: html_parser.py  models.py
confluence_graphrag/table_normalization/: classifier.py  clusterer.py  consolidator.py  fingerprinter.py  models.py  normalizer.py  row_store.py  schema_store.py
docs/: agent2  api.md  architecture.md  configuration.md  data-model.md  stages.md  todos.md
graphAgent/: .env  agent.py  mongo_client.py  tools.py
ui/: graph_explorer.py
