[project]
name = "confluence-graphrag"
version = "0.1.0"
description = "GraphRAG temporal system for Confluence minutes"
requires-python = ">=3.13"
dependencies = [
    # Confluence
    "atlassian-python-api",
    # Scheduling
    "apscheduler",
    # HTML Parsing
    "beautifulsoup4",
    "lxml",
    # Attachment Processing
    "pdfplumber",
    "openpyxl",
    "pandas",
    "python-docx",
    "python-pptx",
    "pillow",
    # AI / LLM / Embeddings
    "google-cloud-aiplatform",
    "langchain",
    "langchain-google-vertexai",
    # Table Normalization
    "rapidfuzz",
    "scikit-learn",
    "numpy",
    # Graph
    "graphiti-core",
    "motor",
    "neo4j",
    # API
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    # Data Validation
    "pydantic[email]",
    "pydantic-settings",
    # HTTP Client
    "httpx",
    # Infra
    "aiofiles",
    "celery",
    "redis",
    "loguru",
    # Config
    "python-dotenv",
    "ipykernel>=7.2.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["confluence_graphrag"]
